[package]
name = "echonet"
version = "1.2.7"
authors = ["The uecho-rs Authors <skonno@cybergarage.org>"]
edition = "2021"
readme = "README.md"
homepage = "http://www.cybergarage.org/"
repository = "https://github.com/cybergarage/uecho-rs"
license = "Apache-2.0"
# license-file = "LICENSE"
description = "ECHONET Lite framework for Rust"
categories = ["network-programming"]
keywords = ["echonet", "echonet-lite"]

[features]
default = ["no_std"]
std = ["once_cell", "unix", "dep:uuid"]
no_std = ["once_cell"]
unix = ["dep:pnet", "dep:ipnetwork", "dep:nix", "dep:net2"]
esp = ["no_std", "dep:esp-idf-sys"]
once_cell = ["dep:once_cell"]

[dependencies]
hex = "0.4"
chrono = "0.4"
log = {version = "0.4.20", default-features = false}
strum =  {version = "0.25", default-features = false}
strum_macros =  {version = "0.25", default-features = false}
once_cell = {version = "1.17.0", default-features = false, features = ["std"], optional = true}
pnet = { version = "0.28.0", optional = true }
ipnetwork = { version = "0.16.0", optional = true }
nix = { version = "0.25.0", optional = true }
net2 = { version = "0.2", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }
esp-idf-sys = { version = "0.31.11", features = ["binstart"], optional = true  }

[dev-dependencies]
signal-hook = "0.3.14"

[[example]]
name = "uechosearch"
path = "examples/uechosearch/uechosearch.rs"

[[example]]
name = "uechopost"
path = "examples/uechopost/uechopost.rs"

[[example]]
name = "uechobench"
path = "examples/uechobench/uechobench.rs"

[[example]]
name = "monolight"
path = "examples/monolight/monolight.rs"
