[package]
name = "echonet"
version = "1.3.1"
authors = ["The uecho-rs Authors <skonno@cybergarage.org>"]
edition = "2021"
readme = "README.md"
homepage = "http://www.cybergarage.org/"
repository = "https://github.com/cybergarage/uecho-rs"
license = "Apache-2.0"
# license-file = "LICENSE"
description = "ECHONET Lite framework for Rust"
categories = ["network-programming"]
keywords = ["echonet", "echonet-lite", "std", "no_std"]

[features]
default = ["std"]
std = ["std_deps", "unix"]
std_win = ["std_deps", "win"]
no_std = ["no_std_deps"]
std_deps = ["dep:log", "dep:uuid", "no_std_deps"]
no_std_deps = ["once_cell", "dep:strum", "dep:strum_macros"]
unix = ["dep:pnet", "dep:ipnetwork", "dep:nix", "dep:net2"]
win = ["dep:pnet", "dep:ipnetwork", "dep:net2"]
esp = ["no_std", "dep:esp-idf-sys"]
once_cell=["dep:once_cell"]

[dependencies]
hex = "0.4"
chrono = "0.4"
log = {version = "0.4.20", default-features = false, optional = true}
strum =  {version = "0.25", default-features = false, optional = true}
strum_macros =  {version = "0.25", default-features = false, optional = true}
once_cell = {version = "1.17.0", default-features = false, optional = true}
pnet = { version = "0.28.0", optional = true }
ipnetwork = { version = "0.16.0", optional = true }
nix = { version = "0.25.0", optional = true }
net2 = { version = "0.2", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }
esp-idf-sys = { version = "0.33.2", features = ["binstart"], optional = true  }

[dev-dependencies]
signal-hook = "0.3.14"

[[example]]
name = "uechosearch"
path = "examples/uechosearch/uechosearch.rs"

[[example]]
name = "uechopost"
path = "examples/uechopost/uechopost.rs"

[[example]]
name = "uechobench"
path = "examples/uechobench/uechobench.rs"

[[example]]
name = "monolight"
path = "examples/monolight/monolight.rs"
